# Fractol

./: CMakeLists.txt  README.md  fractol_reloaded
includes/: image.h  julia_state.h  linear_alg.h  main_loop.h  math_tools.h  mlx_instance.h  mlx_keys.h  opencl_instance.h  raymarch_state.h  shader.h  state.h  tools.h  vertex_buffer.h
libft/: ft_assert.c  ft_strsplit.c  libft.h
programs/: frag.glsl  hello.cl  julia.glsl  mandelbrot.glsl  mandelbulb.glsl  menger.glsl  menger1.glsl  vert.glsl
src/: image.c  julia_state.c  juliastate_functions.c  linear_alg.c  main.c  main_loop.c  mat4_mat4_math.c  math_tools.c  opencl_instance.c  raymarch_state.c  raymarchstate_functions.c  shader.c  tools.c
